[gd_scene load_steps=8 format=2]

[ext_resource path="res://app/icons/menu_lists.svg" type="Texture" id=1]
[ext_resource path="res://app/icons/menu_tracks.svg" type="Texture" id=2]
[ext_resource path="res://app/icons/menu_import.svg" type="Texture" id=3]
[ext_resource path="res://app/modules/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://app/icons/menu_settings.svg" type="Texture" id=5]
[ext_resource path="res://app/icons/menu_home.svg" type="Texture" id=6]

[sub_resource type="ButtonGroup" id=1]

[node name="Menu" type="VBoxContainer"]
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 20.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
text = "MENU_HOME"
icon = ExtResource( 6 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="Button" parent="."]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 40.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
text = "MENU_IMPORT"
icon = ExtResource( 3 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tracks" type="Button" parent="."]
margin_top = 40.0
margin_right = 150.0
margin_bottom = 60.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
text = "MENU_TRACKS"
icon = ExtResource( 2 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Folders" type="Button" parent="."]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 80.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
text = "MENU_FOLDERS"
icon = ExtResource( 1 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_top = 80.0
margin_right = 150.0
margin_bottom = 100.0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
text = "MENU_SETTINGS"
icon = ExtResource( 5 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="Tracks" to="." method="_on_Tracks_pressed"]
[connection signal="pressed" from="Folders" to="." method="_on_Folders_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
